--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
+<p>
 
+</p>
 <p>
   <strong>First name:</strong>
   <%= @person.first_name %>
@@ -10,5 +12,11 @@
   <%= @person.last_name %>
 </p>
 
+<ul>
+  <% @person.phone_numbers.each do |phone| %>
+    <li><%= phone.number %></li>
+  <% end %>
+</ul>
+<%= link_to 'Add phone number', new_phone_number_path(person_id: @person.id) %> |
 <%= link_to 'Edit', edit_person_path(@person) %> |
 <%= link_to 'Back', people_path %>
