--- a/app/views/phone_numbers/_form.html.erb
+++ b/app/views/phone_numbers/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :person_id %>
-    <%= form.number_field :person_id %>
+    <!-- <%#= form.label :person_id %> -->
+    <%= form.hidden_field :person_id %>
   </div>
 
   <div class="actions">
