--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -14,7 +14,8 @@
 
 <ul>
   <% @person.phone_numbers.each do |phone| %>
-    <li><%= phone.number %></li>
+    <!-- <li><%#= phone.number %></li> -->
+    <li><%= phone.number %> <%= link_to('edit', edit_phone_number_path(phone)) %></li>
   <% end %>
 </ul>
 <%= link_to 'Add phone number', new_phone_number_path(person_id: @person.id) %> |
