Finish implementing phone number functionality

--- a/app/views/phone_numbers/index.html.erb
+++ b/app/views/phone_numbers/index.html.erb
@@ -26,4 +26,5 @@
 
 <br>
 
-<%= link_to 'New Phone Number', new_phone_number_path %>
+<%= link_to 'New Phone Number', new_phone_number_path %> | <!-- <%# TODO: see the page this point and fix making visible the field to select the person owner ther number %> -->
+<%= link_to 'People', people_path %>
