--- a/app/views/phone_numbers/_form.html.erb
+++ b/app/views/phone_numbers/_form.html.erb
@@ -17,9 +17,18 @@
   </div>
 
   <div class="field">
-    <!-- <%#= form.label :person_id %> -->
-    <%= form.hidden_field :person_id %>
+    <% if @phone_number.person %>
+      <%= form.hidden_field :person_id %>
+    <% else %>
+      <%= form.label :person_id %>
+      <%= form.number_field :person_id %>
+    <% end %>
   </div>
+
+  <!-- <div class="field">
+    <%#= form.label :person_id %>
+    <%#= form.hidden_field :person_id %>
+  </div> -->
 
   <div class="actions">
     <%= form.submit %>
