--- a/app/views/phone_numbers/show.html.erb
+++ b/app/views/phone_numbers/show.html.erb
@@ -11,4 +11,5 @@
 </p>
 
 <%= link_to 'Edit', edit_phone_number_path(@phone_number) %> |
+<%= link_to('Delete', phone_number_path(@phone_number), :method => "delete") %> |
 <%= link_to 'Back', phone_numbers_path %>
