implements email creation workflow

--- a/app/views/email_addresses/_form.html.erb
+++ b/app/views/email_addresses/_form.html.erb
@@ -17,11 +17,15 @@
   </div>
 
   <div class="field">
-    <%= form.label :person_id %>
-    <%= form.number_field :person_id %>
+    <% if @email_address.person %>
+      <%= form.hidden_field :person_id %>
+    <% else %>
+      <%= form.label :person_id %>
+      <%= form.number_field :person_id %>
+    <% end %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Create Email Address'%>
   </div>
 <% end %>
