--- a/app/views/phone_numbers/index.html.erb
+++ b/app/views/phone_numbers/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Number</th>
-      <th>Person</th>
+      <th>Contact</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
     <% @phone_numbers.each do |phone_number| %>
       <tr>
         <td><%= phone_number.number %></td>
-        <td><%= phone_number.person_id %></td>
+        <td><%= phone_number.contact_id %></td>
         <td><%= link_to 'Show', phone_number %></td>
         <td><%= link_to 'Edit', edit_phone_number_path(phone_number) %></td>
         <td><%= link_to 'Destroy', phone_number, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,5 +26,5 @@
 
 <br>
 
-<%= link_to 'New Phone Number', new_phone_number_path %> | <!-- <%# TODO: see the page this point and fix making visible the field to select the person owner ther number %> -->
+<%= link_to 'New Phone Number', new_phone_number_path %> | <!-- <%# TODO: see the page this point and fix making visible the field to select the contact owner ther number %> -->
 <%= link_to 'People', people_path %>
