--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -3,7 +3,7 @@
 
 </p>
 <p>
-  <strong>First name:</strong>
+  <strong>Person first name:</strong>
   <%= @person.first_name %>
 </p>
 
@@ -31,7 +31,8 @@
     </li>
   <% end %>
 </ul>
+
 <%= link_to 'Add phone number', new_phone_number_path(contact_id: @person.id, contact_type: 'Person') %> |
-<%= link_to 'Add email address', new_email_address_path(contact_id: @person.id) %> |
+<%= link_to 'Add email address', new_email_address_path(contact_id: @person.id, contact_type: 'Person') %> |
 <%= link_to 'Edit', edit_person_path(@person) %> |
 <%= link_to 'Back', people_path %>
