--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,9 +1,30 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Company Name:</strong>
   <%= @company.name %>
 </p>
+<ul>
+  <% @company.phone_numbers.each do |phone| %>
+    <li>
+      <%= phone.number %>
+      <%= link_to('edit', edit_phone_number_path(phone)) %>
+      <%= link_to('delete', phone_number_path(phone), :method => "delete") %>
+    </li>
+  <% end %>
+</ul>
 
+<ul>
+  <% @company.email_addresses.each do |email| %>
+    <li>
+      <%= email.address %>
+      <%= link_to('edit', edit_email_address_path(email)) %>
+      <%= link_to('delete', email_address_path(email), :method => "delete") %>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to 'Add phone number', new_phone_number_path(contact_id: @company.id, contact_type: 'Company') %> |
+<%= link_to 'Add email address', new_email_address_path(contact_id: @company.id, contact_type: 'Company') %> |
 <%= link_to 'Edit', edit_company_path(@company) %> |
 <%= link_to 'Back', companies_path %>
