--- a/app/views/email_addresses/new.html.erb
+++ b/app/views/email_addresses/new.html.erb
@@ -3,8 +3,10 @@
 <%= render 'form', email_address: @email_address %>
 
 
-<% if @email_address.person %>
-  <%= link_to 'Back', person_path(@email_address.person) %>
+<% if @email_address.contact_type == "Company" %>
+  <%= link_to 'Back', company_path(@email_address.contact) %>
+<% elsif @email_address.contact_type == "Person" %>
+  <%= link_to 'Back', person_path(@email_address.contact) %>
 <% else %>
   <%= link_to 'Back', email_addresses_path %>
 <% end %>
