implemented partials for phone and email on show person/company

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -5,23 +5,11 @@
   <%= @company.name %>
 </p>
 <ul>
-  <% @company.phone_numbers.each do |phone| %>
-    <li>
-      <%= phone.number %>
-      <%= link_to('edit', edit_phone_number_path(phone)) %>
-      <%= link_to('delete', phone_number_path(phone), :method => "delete") %>
-    </li>
-  <% end %>
+  <%= render 'phone_numbers/phone_numbers', :phone_numbers => @company.phone_numbers %>
 </ul>
 
 <ul>
-  <% @company.email_addresses.each do |email| %>
-    <li>
-      <%= email.address %>
-      <%= link_to('edit', edit_email_address_path(email)) %>
-      <%= link_to('delete', email_address_path(email), :method => "delete") %>
-    </li>
-  <% end %>
+  <%= render 'email_addresses/email_addresses', :email_addresses => @company.email_addresses %>
 </ul>
 
 <%= link_to 'Add phone number', new_phone_number_path(contact_id: @company.id, contact_type: 'Company') %> |
