--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -13,23 +13,12 @@
 </p>
 
 <ul>
-  <% @person.phone_numbers.each do |phone| %>
-    <!-- <li><%#= phone.number %></li> -->
-    <li><%= phone.number %>
-      <%= link_to('edit', edit_phone_number_path(phone)) %>
-      <%= link_to('delete', phone_number_path(phone), :method => "delete") %>
-    </li>
-  <% end %>
+  <%= render 'phone_numbers/phone_numbers', :phone_numbers => @person.phone_numbers %>
+
 </ul>
 
 <ul>
-  <% @person.email_addresses.each do |email| %>
-    <li>
-      <%= email.address %>
-      <%= link_to('edit', edit_email_address_path(email)) %>
-      <%= link_to('delete', email_address_path(email), :method => "delete") %>
-    </li>
-  <% end %>
+  <%= render 'email_addresses/email_addresses', :email_addresses => @person.email_addresses %>
 </ul>
 
 <%= link_to 'Add phone number', new_phone_number_path(contact_id: @person.id, contact_type: 'Person') %> |
