--- a/app/views/email_addresses/_email_addresses.html.erb
+++ b/app/views/email_addresses/_email_addresses.html.erb
@@ -1,8 +1,11 @@
-<% email_addresses.each do |email|  %>
-  <li>
-    <%= email.address %>
-    <%= link_to('edit', edit_email_address_path(email)) %>
-    <%= link_to('delete', email_address_path(email), :method => "delete") %>
-  </li>
-<% end %>
-  </li>
+<ul>
+  <% email_addresses.each do |email|  %>
+    <li>
+      <%= email.address %>
+      <ul>
+        <li><%= link_to('Edit', edit_email_address_path(email)) %></li>
+        <li><%= link_to('Delete', email_address_path(email), :method => "delete", data: { confirm: 'Are you sure?' }) %></li>
+      </ul>
+    </li>
+  <% end %>
+</ul>
