--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,27 +1,19 @@
 <p id="notice"><%= notice %></p>
 <p>
+  <h1><%= @person.first_name + " " + @person.last_name %></h1>
 
 </p>
-<p>
-  <strong>Person first name:</strong>
-  <%= @person.first_name %>
-</p>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @person.last_name %>
-</p>
 
-<ul>
   <%= render 'phone_numbers/phone_numbers', :phone_numbers => @person.phone_numbers %>
 
-</ul>
-
-<ul>
   <%= render 'email_addresses/email_addresses', :email_addresses => @person.email_addresses %>
-</ul>
+
 
 <%= link_to 'Add phone number', new_phone_number_path(contact_id: @person.id, contact_type: 'Person') %> |
-<%= link_to 'Add email address', new_email_address_path(contact_id: @person.id, contact_type: 'Person') %> |
-<%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back', people_path %>
+<%= link_to 'Add email address', new_email_address_path(contact_id: @person.id, contact_type: 'Person') %>
+
+<ul>
+  <li><%= link_to "Edit #{@person.first_name}", edit_person_path(@person) %></li>
+  <li><%= link_to 'People List', people_path %></li>
+</ul>
