--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Company</h1>
+<h1>Editing <%= @company.name %> </h1>
 
 <%= render 'form', company: @company %>
 
-<%= link_to 'Show', @company %> |
-<%= link_to 'Back', companies_path %>
+<%= link_to "Back #{@company.name}", @company %> |
+<%= link_to 'Companies List', companies_path %>
