--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -14,9 +14,13 @@
     <% @companies.each do |company| %>
       <tr>
         <td><%= company.name %></td>
-        <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <ul class="actions">
+            <li><%= link_to 'Show', company %></li>
+            <li><%= link_to 'Edit', edit_company_path(company) %></li>
+            <li><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+          </ul>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Company', new_company_path %>
+<%= link_to 'New Company', new_company_path, :id => "new_company" %> |
+<%= link_to 'People List', people_path %>
