--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Person</h1>
+<h1>Editing <%= "#{@person.first_name} #{@person.last_name}" %> </h1>
 
 <%= render 'form', person: @person %>
 
-<%= link_to 'Show', @person %> |
-<%= link_to 'Back', people_path %>
+<%= link_to "Back #{@person.first_name}", @person %> |
+<%= link_to 'People List', people_path %>
