--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,11 +13,16 @@
   <tbody>
     <% @people.each do |person| %>
       <tr>
-        <td><%= person.first_name %></td>
-        <td><%= person.last_name %></td>
-        <td><%= link_to 'Show', person %></td>
-        <td><%= link_to 'Edit', edit_person_path(person) %></td>
-        <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= "#{person.first_name} #{person.last_name}" %>
+        </td>
+        <td>
+          <ul class="actions">
+            <li><%= link_to 'Show', person %></li>
+            <li><%= link_to 'Edit', edit_person_path(person) %></li>
+            <li><%= link_to 'Delete', person, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+          </ul>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +30,5 @@
 
 <br>
 
-<%= link_to 'New Person', new_person_path %>
+<%= link_to 'New Person', new_person_path, :id => "new_person" %> |
+<%= link_to 'Companies List', companies_path %>
