--- a/app/views/phone_numbers/_phone_numbers.html.erb
+++ b/app/views/phone_numbers/_phone_numbers.html.erb
@@ -1,7 +1,9 @@
-<% phone_numbers.each do |phone| %>
-  <li>
-    <%= phone.number %>
-    <%= link_to('edit', edit_phone_number_path(phone)) %>
-    <%= link_to('delete', phone_number_path(phone), :method => "delete") %>
-  </li>
-<% end %>
+<ul>
+  <% phone_numbers.each do |phone| %>
+    <li>
+      <%= phone.number %>
+      <%= link_to('Edit', edit_phone_number_path(phone)) %>
+      <%= link_to('Delete Phone', phone_number_path(phone), :method => "delete", data: { confirm: 'Are you sure?' }) %>
+    </li>
+  <% end %>
+</ul>
