--- a/app/views/phone_numbers/edit.html.erb
+++ b/app/views/phone_numbers/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Phone Number</h1>
+<h1><%= "Editing Phone Number of #{@phone_number.contact}"%></h1>
 
 <%= render 'form', phone_number: @phone_number %>
 
-<%= link_to 'Show', @phone_number %> |
-<%= link_to 'Back', phone_numbers_path %>
+<% if @phone_number.contact_type == "Company" %>
+  <%= link_to "Back #{@phone_number.contact}", company_path(@phone_number.contact) %> |
+  <%= link_to 'Companies List', companies_path %>
+<% elsif @phone_number.contact_type == "Person"%>
+  <%= link_to "Back #{@phone_number.contact}", person_path(@phone_number.contact) %> |
+  <%= link_to 'People List', people_path %>
+<% end %>
