--- a/app/views/phone_numbers/new.html.erb
+++ b/app/views/phone_numbers/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New Phone Number</h1>
+<h1><%= "New Phone Number for '#{@phone_number.contact}'" %></h1>
 
 <%= render 'form', phone_number: @phone_number %>
 
-<% if @phone_number.contact %>
-  <%= link_to 'Back', person_path(@phone_number.contact) %>
-<% else %>
-  <%= link_to 'Back', phone_numbers_path %>
+<% if @phone_number.contact_type == "Company" %>
+  <%= link_to "Back #{@phone_number.contact}", company_path(@phone_number.contact) %> |
+  <%= link_to 'Companies List', companies_path %>
+<% elsif @phone_number.contact_type == "Person" %>
+  <%= link_to "Back #{@phone_number.contact}", person_path(@phone_number.contact) %> |
+  <%= link_to 'People List', people_path %>
 <% end %>
